<resources>
    <string name="app_name" translatable="false">SwishBirthday</string>
    <string name="InputName">Input name</string>
    <string name="Information">Information</string>
    <string name="textView2">Name:</string>
    <string name="textView4">Date:</string>
    <string name="textView6">Time:</string>
    <string name="Turns">Turns</string>
    <string name="buttonEditBirthday">Edit</string>
    <string name="buttonDeleteBirthday">Delete</string>
    <string name="AddBirthdayActivity">Add birthday</string>
    <string name="buttonAddBirthday">Add</string>
    <string name="empty_name">Name field cannot be empty</string>
    <string name="empty_date">Date field cannot be empty</string>
    <string name="toast_add">Birthday added successfully!</string>
    <string name="editTextName">Name</string>
    <string name="editTextDate">Date of birth</string>
    <string name="editTextTime">Time</string>
    <string name="EditBirthdayActivity">Edit birthday</string>
    <string name="toast_edit">Birthday updated successfully!</string>
    <string name="toast_delete">Birthday deleted successfully!</string>
    <string name="toast_search">Birthdays not found</string>
</resources>